# pokerbot

./: CLAUDE.md  README.md  main.py  pyproject.toml
agents/: cfr_agent.py
cfr/: abstract_state.py  abstraction.py  info_set.py  mccfr.py  regret_table.py  trainer.py
docs/superpowers/plans/: 2026-06-16-base-game.md  2026-06-24-cfr-agent.md
docs/superpowers/specs/: 2026-06-16-base-game-design.md  2026-06-24-cfr-agent-design.md
game/: poker.py  pot_manager.py
models/: card.py  player.py  state.py
scripts/: profile_exploitability.py  run_simulation.py  train_cfr.py
tests/: conftest.py  test_card.py  test_cfr_agent.py  test_evaluator.py  test_player.py  test_pot_manager.py
tests/cfr/: conftest.py  test_abstract_state.py  test_abstraction.py  test_info_set.py  test_mccfr.py  test_regret_table.py  test_trainer.py
util/: evaluator.py  observer.py  util.py
