[project]
name = "pokerbot"
version = "0.1.0"
description = "Texas Hold'em poker simulator with pluggable agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "tqdm>=4.66",
]

[dependency-groups]
dev = ["pytest>=9.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
